--- a/scripts/install
+++ b/scripts/install
@@ -1,11 +1,11 @@
 #!/bin/bash
 
-set -e
+app=$YNH_APP_INSTANCE_NAME
 
-source ./_common.sh
+# Source YunoHost helpers
+source /usr/share/yunohost/helpers
 
 # Retrieve arguments
-app=$YNH_APP_INSTANCE_NAME
 domain=$YNH_APP_ARG_DOMAIN
 path=$YNH_APP_ARG_PATH
 is_public=$YNH_APP_ARG_IS_PUBLIC
