--- a/scripts/install
+++ b/scripts/install
@@ -45,12 +45,12 @@ sudo mkdir $final_path/documents
 final_conf_path=$final_path/conf/conf.php
 sudo cp ../conf/conf.php $final_conf_path
 
-sudo sed -i "s/YNH_MAIN_URL/$domain$path/" $final_conf_path
-sudo sed -i "s/YNH_DOC_ROOT/$final_path/" $final_conf_path
-sudo sed -i "s/YNH_DATA_ROOT/$final_path/documents/" $final_conf_path
-sudo sed -i "s/YNH_DB_NAME/$dbname/" $final_conf_path
-sudo sed -i "s/YNH_DB_USER/$dbuser/" $final_conf_path
-sudo sed -i "s/YNH_DB_PASS/$dbpass/" $final_conf_path
+sudo sed -i "s@YNH_MAIN_URL@$domain$path@g" $final_conf_path
+sudo sed -i "s@YNH_DOC_ROOT@$final_path@g" $final_conf_path
+sudo sed -i "s@YNH_DATA_ROOT@$final_path\/documents@g" $final_conf_path
+sudo sed -i "s@YNH_DB_NAME@$dbname@g" $final_conf_path
+sudo sed -i "s@YNH_DB_USER@$dbuser@g" $final_conf_path
+sudo sed -i "s@YNH_DB_PASS@$dbpass@g" $final_conf_path
 
 sudo chown -R www-data: $final_path
 
