fixe nginx conf

--- a/scripts/install
+++ b/scripts/install
@@ -62,9 +62,10 @@ if [ "$path" = "" ]; then
   sudo sed -i "s@PATHTOCHANGE@/@g" $nginx_conf_path
 else
   # Modify Nginx configuration file
-  sudo sed -i "s@PATHTOCHANGE@$path@g" $nginx_conf_path
+  sudo sed -i "s@PATHTOCHANGE@$final_path@g" $nginx_conf_path
 fi
-sudo sed -i "s@ALIASTOCHANGE@$final_path/@g" $nginx_conf_path
+sudo sed -i "s@ALIASTOCHANGE@$domain$path/@g" $nginx_conf_path
+sudo sed -i "s@NAMETOCHANGE@$app@g" $nginx_conf_path
 # Reload Nginx and regenerate SSOwat conf
 sudo service nginx reload
 # If app is public, add url to SSOWat conf as skipped_uris
@@ -102,3 +103,5 @@ sudo yunohost app ssowatconf
 
 # TODO
 # Attention, pour des raisons de sécurité, afin de bloquer une nouvelle utilisation des outils d'installation/migration, une fois l'installation terminée, il est conseillé de placer dans le répertoire document de Dolibarr un fichier nommé install.lock en lecture seule.
+sudo touch $final_path/install.lock
+sudo chmod -wx $final_path/install.lock
