--- a/scripts/install
+++ b/scripts/install
@@ -62,9 +62,9 @@ if [ "$path" = "" ]; then
   sudo sed -i "s@PATHTOCHANGE@/@g" $nginx_conf_path
 else
   # Modify Nginx configuration file
-  sudo sed -i "s@PATHTOCHANGE@$final_path@g" $nginx_conf_path
+  sudo sed -i "s@PATHTOCHANGE@$path@g" $nginx_conf_path
 fi
-sudo sed -i "s@ALIASTOCHANGE@$domain$path/@g" $nginx_conf_path
+sudo sed -i "s@ALIASTOCHANGE@$final_path/@g" $nginx_conf_path
 sudo sed -i "s@NAMETOCHANGE@$app@g" $nginx_conf_path
 # Reload Nginx and regenerate SSOwat conf
 sudo service nginx reload
